--- a/JS_CSS_PortfolioProject-master/index.html
+++ b/JS_CSS_PortfolioProject-master/index.html
@@ -54,7 +54,7 @@
                       and extract valuable insights for key stakeholders.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://drive.google.com/file/d/13tvqRkKMV3es2Z0cnTKQbSaiiPaZcu22/view?usp=sharing" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -437,8 +437,7 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            76-E Harsh Vihar Greater Noida West,PINCODE-201308
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -447,7 +446,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : Bangalore, India
+                                    : Noida, India
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -491,13 +490,13 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
+                                <a href="https://www.facebook.com/abhishek.shahi.54540218" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://twitter.com/Abhishe06475849?t=GIcFIGAGvk36-WVw0LlXTg&s=09" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/AbhishekShahi01" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                                 <a href="#" target="_blank">
@@ -519,7 +518,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="https://drive.google.com/file/d/13tvqRkKMV3es2Z0cnTKQbSaiiPaZcu22/view?usp=sharing" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
